# maquette-paas

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  settings.toml  setup.cfg
api/: apps.py  urls.py  views.py
api/buildpacks/: Buildpack.py  Buildpacks.py  StaticWebapp.py
api/buildpacks/static_webapp/: Dockerfile  StaticWebapp.py
api/deployment/: Deployment.py  DeploymentInfo.py  DeploymentProcess.py  Infrastructure.py  Manifest.py
mq/: asgi.py  config.py  logger.py  main.py  nginx.py  server.py  settings.py  urls.py  wsgi.py
mq/buildpacks/: Buildpacks.py
mq/buildpacks/static_webapp/: Dockerfile  StaticWebapp.py
mq/cli/: push.py
mq/deployment/: Deployment.py  DeploymentProcess.py  Infrastructure.py  Manifest.py
test/: index.html
